--- a/index.html
+++ b/index.html
@@ -651,11 +651,4 @@
 
    <script src="logi.js"></script>
 </body>
-</html>025-08-01 09:00',
-                        location: 'Shanghai Manufacturing Facility',
-                        details: 'Package picked up from electronics manufacturer. Items secured and documented.',
-                        status: 'processing',
-                        temperature: 22
-                    },
-                    {
-                        date: '2
+</html>
